# Convolutions

./: CMakeLists.txt  conv.cpp  conv.hpp  lin.cpp  lin.hpp  main.cpp  net.cpp  net.hpp  net_cnf.json
